# kernwald

./: .gitignore
src/kernwald_bringup/: CMakeLists.txt  package.xml
src/kernwald_bringup/config/: ros2_controllers.yaml  sensors_3d.yaml
src/kernwald_bringup/launch/: commander.launch.py  gz_sim.launch.py  kernwald.launch.py
src/kernwald_bringup/rviz2/: config.rviz
src/kernwald_bringup/worlds/: world.sdf
src/kernwald_commander_cpp/: CMakeLists.txt  package.xml
src/kernwald_commander_cpp/src/: commander.cpp  test_moveit.cpp
src/kernwald_description/: CMakeLists.txt  package.xml
src/kernwald_description/launch/: display.launch.py
src/kernwald_description/rviz2/: config.rviz
src/kernwald_description/urdf/: common_properties.xacro  gripper.xacro  kernwald.ros2_control.xacro  kernwald.xacro
src/kernwald_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kernwald_moveit_config/config/: initial_positions.yaml  kernwald.srdf  kernwald.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/kernwald_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kernwald_perception/: CMakeLists.txt  package.xml
src/kernwald_perception/src/: cube_detection.cpp  cube_detector.cpp
src/kernwalt_moveit_config/: CMakeLists.txt  package.xml
src/kernwalt_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kernwald.ros2_control.xacro  kernwald.srdf  kernwald.urdf.xacro  moveit_controllers.yaml  sensors_3d.yaml
src/kernwalt_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
